--- a/src/bundle/Resources/public/scss/_content-type-edit.scss
+++ b/src/bundle/Resources/public/scss/_content-type-edit.scss
@@ -209,7 +209,10 @@
             &--field-definition-loading {
                 animation: field-add-pulse 1s 1;
                 pointer-events: none;
+            }
 
+            &--field-definition-error {
+                animation: field-error-pulse 1s 1;
             }
 
             &--field-definition-highlight {
@@ -321,7 +324,7 @@
         border-color: $ibexa-color-light-300;
         box-shadow: 0 0 0 0 $ibexa-color-light-300;
     }
-    50% {
+    10% {
         border-color: $ibexa-color-light-300;
         box-shadow: 0 0 0 calculateRem(10px) $ibexa-color-light-300;
     }
@@ -336,12 +339,27 @@
         border-color: $ibexa-color-info-100;
         box-shadow: 0 0 0 0 $ibexa-color-info-100;
     }
-    50% {
+    10% {
         border-color: $ibexa-color-info-100;
         box-shadow: 0 0 0 calculateRem(10px) $ibexa-color-info-100;
     }
     100% {
         border-color: $ibexa-color-info-100;
         box-shadow: 0 0 0 0 $ibexa-color-info-100;
+    }
+}
+
+@keyframes field-error-pulse {
+    0% {
+        border-color: $ibexa-color-danger-100;
+        box-shadow: 0 0 0 0 $ibexa-color-danger-100;
+    }
+    10% {
+        border-color: $ibexa-color-danger-100;
+        box-shadow: 0 0 0 calculateRem(10px) $ibexa-color-danger-100;
+    }
+    100% {
+        border-color: $ibexa-color-danger-100;
+        box-shadow: 0 0 0 0 $ibexa-color-danger-100;
     }
 }
