IBX-2783: remove ibexa-font-sans-serif SCSS mixin

--- a/src/bundle/Resources/public/scss/_card.scss
+++ b/src/bundle/Resources/public/scss/_card.scss
@@ -1,6 +1,6 @@
 .ibexa-card {
     border: none;
-    background-color: $ibexa-color-white;
+    background: transparent;
 
     .form-group {
         width: 70%;
